[package]
name = "microll"
version = "0.1.0"
authors = ["Tom Hightower <tom.hightower356@gmail.com>"]
description = "A text-based web browser written in Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod = { version = "0.61", features = ["glium", "winit"] }

clipboard = "0.5"
reqwest = "0.9"
nfd = "0.0.4"
rand = "*"