[package]
name = "microll"
version = "0.2.0"
authors = ["Tom Hightower <tom.hightower356@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.35"
rfd = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
